[package]
name = "diatomic-waker"
# When incrementing version and releasing to crates.io:
# - Update crate version in README.md
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
version = "0.2.1"
authors = ["Asynchronics and contributors"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/diatomic-waker"
readme = "README.md"
description = """
An async, lock-free synchronization primitive for task wakeup.
"""
categories = ["asynchronous", "concurrency"]
keywords = ["async", "waker", "atomic", "no_std", "no_alloc"]

[features]
default = ["alloc"]
alloc = []
diatomic-waker-loom = ["dep:loom", "dep:waker-fn"]

[dependencies]
waker-fn = { version = "1.1", optional = true }
loom = { version = "0.7", optional = true }

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
